fixed broken style on device  log in, edit and sigup including events

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -222,6 +222,9 @@ button#submit.btn.btn-success {
   left: -1.9%;
 
 }
+.radio input[type="radio"], .checkbox input[type="checkbox"] {
+  float:none;
+}
 
 // input[type="file"] {
 //   position: relative;
